adjusted HTML output

--- a/output/CAR.html
+++ b/output/CAR.html
@@ -5,18 +5,18 @@
 
 <h3><a href="http://proxy-um.researchport.umd.edu/login?url=http://search.rdsinc.com/texis/rds/sessions?userid=umd&products=BNI,TBL,BMP">RDS Business Reference Suite</a>:</h3>
 <p>[Full-text, time coverage varies by title.] Provides access to three important database - RDS Business & Industry (covers industry trade journals,magazines and newspapers); RDS Business & Management Practices (covers journals and magazines dealing with business and management issues) and RDS Tablebase (provides business statistics, i.e., market share, market size, advertising expenditures, etc.).</p>
-<div style="font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
-<p><strong>Tags</strong>: industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development</p>
+<div style="font-size: 90%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
+<p><strong>Keywords</strong>: industry research,  company research,  product,  country research,  economics,  career,  marketing,  logistics,  advertising,  analyst reports,  company profiles,  competitors,  corporate culture,  human resource management,  investment and securities,  labor relations,  management,  market share,  mergers & acquisitions,  product development,  promotion,  public relations,  research development</p>
 </div>
 <h3><a href="http://www.volunteertoday.com/">Volunteer Today</a>:</h3>
 <p>The electronic gazette for volunteerism.</p>
-<div style="font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
-<p><strong>Tags</strong>: volunteerism,  career</p>
+<div style="font-size: 90%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
+<p><strong>Keywords</strong>: volunteerism,  career</p>
 </div>
 <h3><a href="http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA">Wall Street Journal (Factiva)</a>:</h3>
 <p>Click on News Pages (top of screen) to get access to major business newspapers. Factiva provides access to over 8,000 business sources, including national and international newspapers, magazines, newswire services, web sites and industry (trade) sources. It covers business news articles in a wide range of topic areas: companies, industries, markets, products, brands, and general financial articles.Factiva recommends using Internet Explorer 5.01 or higher. Licensing restrictions apply on subscription databases. This database has only 12 simutaneous users. If you are unable to access, please try again.</p>
-<div style="font-size: 80%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
-<p><strong>Tags</strong>: industry research,  company research,  career,  finance investment</p>
+<div style="font-size: 90%; line-height: 110%; padding: 0px 20px; margin: 0px 25px 20px 25px">
+<p><strong>Keywords</strong>: industry research,  company research,  career,  finance investment</p>
 </div>
 
 </body>
