added sorting of cats/keys

--- a/output/Pro.html
+++ b/output/Pro.html
@@ -1,3 +1,7 @@
-
-<p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></p>
-<p>Comprehensive database of business sources - includes over 3600 peer reviewed journals, trade publications/ magazines, books, case studies, Company profiles, SWOT analysis etc.</p>
+<a href='vbic/keywords#p'>p</a><br />
+<a href='vbic/keywords#r'>r</a><br />
+<a href='vbic/keywords#o'>o</a><br />
+<a href='vbic/keywords#d'>d</a><br />
+<a href='vbic/keywords#u'>u</a><br />
+<a href='vbic/keywords#c'>c</a><br />
+<a href='vbic/keywords#t'>t</a><br />
