--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -24,7 +24,7 @@
 <a href='#X'>X</a>&nbsp;
 <a href='#Y'>Y</a>&nbsp;
 <a href='#Z'>Z</a>&nbsp;
-<h3><a name='A'>A</a></h3>
+<h3 id='A'>A</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=aph'>Academic Search Premier</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data.worldbank.org/data-catalog/africa-development-indicators'>Africa Development Indicators, World Bank</a></li>
@@ -36,7 +36,7 @@
 <li><a href='http://www.ashoka.org/home/index.cfm'>Ashoka</a></li>
 <li><a href='http://wrds.wharton.upenn.edu'>AuditAnalytics (Access via WRDS.)</a></li>
 </ul>
-<h3><a name='B'>B</a></h3>
+<h3 id='B'>B</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.state.gov/r/pa/ei/bgn/'>Background Notes</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://elibrary-data.imf.org'>Balance of Payments Statistics &mdash; IMF eLibrary &mdash; Data</a></li>
@@ -49,7 +49,7 @@
 <li><a href='http://www.bls.gov/'>Bureau of Labor Statistics</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></li>
 </ul>
-<h3><a name='C'>C</a></h3>
+<h3 id='C'>C</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://lnps.fdncenter.org/'>Catalog of Nonprofit Literature</a></li>
 <li><a href='http://www.cebit.de/homepage_e?channel=1'>CeBIT</a></li>
@@ -71,7 +71,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.credoreference.com'>CREDO</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift)</a></li>
 </ul>
-<h3><a name='D'>D</a></h3>
+<h3 id='D'>D</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/KBR'>D&amp;B Key Business Ratios</a></li>
 <li><a href='http://www.usa.gov/Topics/Reference_Shelf/Data.shtml'>Data and Statistics: USA.gov</a></li>
@@ -82,7 +82,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/pqdtft?accountid=14696'>Dissertations &amp; Theses: Full Text</a></li>
 <li><a href='http://www.doingbusiness.org/'>Doing Business Database</a></li>
 </ul>
-<h3><a name='E'>E</a></h3>
+<h3 id='E'>E</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.census.gov/econ/estats/'>E-Stats: Measuring the Electronic Economy</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&defaultdb=ecn&profile=ehost'>EconLit</a></li>
@@ -102,7 +102,7 @@
 <li><a href='http://faculty.philau.edu/russowl/russow.html'>Everything International</a></li>
 <li><a href='http://www.export.gov/'>Export.gov</a></li>
 </ul>
-<h3><a name='F'>F</a></h3>
+<h3 id='F'>F</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></li>
 <li><a href='http://www.fbo.gov/'>FedBizOpps.gov (Federal Business Opportunities)</a></li>
@@ -119,7 +119,7 @@
 <li><a href='http://www.federalreserve.gov/monetarypolicy/beigebook/default.htm'>FRB Beige Book</a></li>
 <li><a href='http://www.freightworld.com/'>Freight World</a></li>
 </ul>
-<h3><a name='G'>G</a></h3>
+<h3 id='G'>G</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://institution.gallup.com'>Gallup Brain</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://researchport.umd.edu/shib/CP/Gartner/gartner.cgi'>Gartner Group</a></li>
@@ -134,7 +134,7 @@
 <li><a href='http://www.hbs.edu/leadership/database/'>Great American Business Leaders of the Twentieth Century</a></li>
 <li><a href='http://www2.guidestar.org/'>GuideStar</a></li>
 </ul>
-<h3><a name='H'>H</a></h3>
+<h3 id='H'>H</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.elsevier.com/wps/find/S04.cws_home/books'>Handbooks in Economics</a></li>
 <li><a href='http://www.usitc.gov/tata/hts/bychapter/index.htm'>Harmonized Tariff Schedule (HTF) Codes</a></li>
@@ -142,28 +142,28 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></li>
 <li><a href='http://hdr.undp.org/en/countries/'>Human Development Report</a></li>
 </ul>
-<h3><a name='I'>I</a></h3>
+<h3 id='I'>I</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></li>
 <li><a href='http://www.idealist.org/'>Idealist</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>IHS Global Insight DataInsight Web</a></li>
 <li><a href='http://www.independentsector.org/'>Independent Sector</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.worldbank.org/7S1VU9WNZ0'>Information and Communication Technologies (ICT) At-A-Glance Tables</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/'>Institute for the Study of Security Markets (ISSM) – Access via WRDS.</a></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/'>Institute for the Study of Security Markets (ISSM)</a></li>
 <li><a href='http://cyborlink.com/besite/'>International Business, Etiquette and Manners</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.worldbank.org/data/icp'>International Comparison Program</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.imfstatistics.org'>International Financial Statistics</a></li>
 </ul>
-<h3><a name='J'>J</a></h3>
+<h3 id='J'>J</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.jedh.org/jedh_home.html'>Joint External Debt Hub (JEDH)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.jstor.org/'>JSTOR</a></li>
 </ul>
-<h3><a name='K'>K</a></h3>
+<h3 id='K'>K</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.kwintessential.co.uk/resources/country-profiles.html'>Kwintessential Country Profiles</a></li>
 </ul>
-<h3><a name='L'>L</a></h3>
+<h3 id='L'>L</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://lanic.utexas.edu/las.html'>LANIC</a></li>
 <li><a href='http://www.usa.gov/Topics/Reference_Shelf/Laws.shtml'>Laws and Regulations: General Reference Sources</a></li>
@@ -172,7 +172,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/stcapuniv'>LexisNexis State Capital</a></li>
 <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/TOPICS/EXTTRANSPORT/EXTTLF/0,,contentMDK:21514122~menuPK:3875957~pagePK:210058~piPK:210062~theSitePK:515434,00.html'>Logistics Performance Index (LPI)</a></li>
 </ul>
-<h3><a name='M'>M</a></h3>
+<h3 id='M'>M</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://researchport.umd.edu/V/N9TF6DDJ5Q69HV4XY44IQQNER1KVEHDAP2KPYJV12I4U43U1EA-39686?func=native-link&resource=UMD08056'>Making of the Modern World: The Goldsmiths-Kress Library of Economic Literature 1450-1850</a></li>
 <li><a href='http://www.buyusainfo.net/'>Market Research Library</a></li>
@@ -186,7 +186,7 @@
 <li><a href=''>Morningstar Direct (Access available in Van Munching Hall Finance Labs and via SmithApps)</a></li>
 <li><a href=''>Morningstar EnCorr (Access available in Van Munching Hall Financial Labs and via SmithApps)</a></li>
 </ul>
-<h3><a name='N'>N</a></h3>
+<h3 id='N'>N</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.nasdaq.com/'>NASDAQ</a></li>
 <li><a href='http://www.nber.org/'>National Bureau of Economic Research (NBER)</a></li>
@@ -199,17 +199,17 @@
 <li><a href='http://www.census.gov/eos/www/naics/'>North American Industry Classification System (NAICS)</a></li>
 <li><a href='http://nyse.nyx.com/'>NYSE - New York Stock Exchange</a></li>
 </ul>
-<h3><a name='O'>O</a></h3>
+<h3 id='O'>O</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://stats.bls.gov/ooh/'>Occupational Outlook Handbook</a></li>
 <li><a href='http://www.offstats.auckland.ac.nz/'>OffStats- Official Statistics on the Web</a></li>
 <li><a href='http://www.nationsonline.org/'>One World - Nations Online</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=OVIC'>Opposing Viewpoints in Context</a></li>
-<li><a href=''>OptionMetrics (Access via – WRDS) </a></li>
+<li><a href=''>OptionMetrics</a></li>
 <li><a href='http://www.bls.gov/bls/Industry.htm'>Overview of BLS Statistics by Industry</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.oxfordreference.com/view/10.1093/acref/9780195105070.001.0001/acref-9780195105070'>Oxford Encyclopedia of Economic History</a></li>
 </ul>
-<h3><a name='P'>P</a></h3>
+<h3 id='P'>P</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://psidonline.isr.umich.edu/default.aspx'>Panel Study of Income Dynamics (PSID)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.portal.euromonitor.com'>Passport</a></li>
@@ -220,11 +220,11 @@
 <li><a href='http://www.pwcmoneytree.com/MTPublic/ns/index.jsp'>PricewaterhouseCoopers - MoneyTree Report</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=PSYH'>PsycInfo</a></li>
 </ul>
-<h3><a name='Q'>Q</a></h3>
+<h3 id='Q'>Q</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/DATASTATISTICS/EXTDECQEDS/0,,menuPK:1805431~pagePK:64168427~piPK:64168435~theSitePK:1805415,00.html'>Quarterly External Debt Statistics (QEDS/SDDS/GDDS)</a></li>
 </ul>
-<h3><a name='R'>R</a></h3>
+<h3 id='R'>R</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.railIndustry.com/'>RAILIndustry.com</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.rdsinc.com/texis/rds/sessions?userid=umd&Products=BNI,TBL,BMP'>RDS Business Reference Suite</a></li>
@@ -236,7 +236,7 @@
 <li><a href='http://www.rfe.org'>RFE: Resources for Economists on the Internet</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://checkpoint.riag.com/login?iploc=UNTYOFMANDCOGEPARK'>RIA Checkpoint</a></li>
 </ul>
-<h3><a name='S'>S</a></h3>
+<h3 id='S'>S</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.schwabfound.org/sf/index.htm'>Schwab Foundation for Social Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/?DestApp=WOS&editions=SCI'>Science Citation Index Expanded - Web of Science</a></li>
@@ -256,21 +256,21 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/statuniv'>Statistical Insight (ProQuest)</a></li>
 <li><a href='http://www.bls.gov/bls/other.htm'>Statistical Sites of the World Wide Web</a></li>
 </ul>
-<h3><a name='T'>T</a></h3>
+<h3 id='T'>T</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.taxpolicycenter.org/'>Tax Policy Center</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=TERC'>Testing and Education Reference Center</a></li>
 <li><a href='http://www.thomasnet.com/'>ThomasNet</a></li>
 <li><a href=''>Thomson Reuters Eikon (Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505)</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Thomson Reuters SDC Platinum (Access via SmithApps)</a></li>
-<li><a href=''>Thomson Reuters LPC DealScan (Access via WRDS)</a></li>
-<li><a href=''>Thomson Reuters Institutional Holdings (13F) (Access via WRDS)</a></li>
-<li><a href=''>Thomson Reuters Insider Filing Data Feed (Access via WRDS)</a></li>
-<li><a href=''>Thomson Reuters Mutual Fund Holdings (Access via WRDS)</a></li>
+<li><a href=''>Thomson Reuters LPC DealScan</a></li>
+<li><a href=''>Thomson Reuters Institutional Holdings (13F)</a></li>
+<li><a href=''>Thomson Reuters Insider Filing Data Feed</a></li>
+<li><a href=''>Thomson Reuters Mutual Fund Holdings</a></li>
 <li><a href='http://users.cs.jmu.edu/bernstdh/web/tide/index.html'>TIDE'S Directory of Transportation Information</a></li>
 <li><a href='http://www.trade.gov/mas/ian/build/groups/public/@tg_ian/documents/webcontent/tg_ian_003364.pdf'>Top U.S. Trading Partners</a></li>
 </ul>
-<h3><a name='U'>U</a></h3>
+<h3 id='U'>U</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://www.census.gov/'>U.S. Census Bureau</a></li>
 <li><a href='http://www.trade.gov/cs/index.asp'>U.S. Commercial Service</a></li>
@@ -279,12 +279,12 @@
 <li><a href='http://www.bea.gov/newsreleases/glance.htm'>U.S. Economy at a Glance: Perspectives from the U.S. Department of Commerce</a></li>
 <li><a href='http://www.trade.gov/mas/ian/tradestatistics/index.asp'>U.S. Trade Statistics</a></li>
 </ul>
-<h3><a name='V'>V</a></h3>
+<h3 id='V'>V</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www3.valueline.com/is/rc.aspx'>ValueLine (ValueLine Investment Survey)</a></li>
 <li><a href='http://www.volunteertoday.com/'>Volunteer Today</a></li>
 </ul>
-<h3><a name='W'>W</a></h3>
+<h3 id='W'>W</h3> [<a href='#'>back to top</a>]
 <ul>
 <li><a href='http://web.utk.edu/~jwachowi/wacho_world.html'>Wachowicz's Web World- Websites for Discerning Finance Students</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Wall Street Journal (Factiva)</a></li>
@@ -304,16 +304,16 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://firstsearch.oclc.org/fsip?dbname=worldcat'>WorldCat (First Search)</a></li>
 <li><a href='http://www.worldlii.org/'>WorldLII</a></li>
 <li><a href='http://wrds.wharton.upenn.edu/'>WRDS (Wharton Research Data Service)</a></li>
-<li><a href=''>WRDS SEC Analytics Suite (Access via WRDS)</a></li>
+<li><a href=''>WRDS SEC Analytics Suite</a></li>
 <li><a href='http://www2.etown.edu/vl/'>WWW Virtual Library: International Affairs Resources</a></li>
 </ul>
-<h3><a name='X'>X</a></h3>
+<h3 id='X'>X</h3> [<a href='#'>back to top</a>]
 <ul>
 </ul>
-<h3><a name='Y'>Y</a></h3>
+<h3 id='Y'>Y</h3> [<a href='#'>back to top</a>]
 <ul>
 </ul>
-<h3><a name='Z'>Z</a></h3>
+<h3 id='Z'>Z</h3> [<a href='#'>back to top</a>]
 <ul>
-<li><a href='http://zanran.com/q/'>Zanran- Key Source for Data and Statistics, Graphs, Charts and Tables</a></li>
+<li><a href='http://zanran.com/q/'>Zanran: Key Source for Data and Statistics, Graphs, Charts and Tables</a></li>
 </ul>
