--- a/output/Fin.html
+++ b/output/Fin.html
@@ -1,5 +1,5 @@
 
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoovers Online</a></p>
