--- a/output/rel-dem.html
+++ b/output/rel-dem.html
@@ -1,6 +1,5 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#populationandhousingdata'>Population and housing data</a></li>
-<li><a href='/vbic/keywords#laboreconomics'>Labor economics</a></li>
-<li><a href='/vbic/keywords#countyandcitydata'>County and city data</a></li>
+<li><a href='/vbic/keywords#laboreconomics'>Labor Economics</a></li>
+<li><a href='/vbic/keywords#populationandhousingdata'>Population and Housing Data</a></li>
 </ul>
