--- a/output/rel-eco.html
+++ b/output/rel-eco.html
@@ -1,7 +1,7 @@
 <h3>Related Topics</h3>
 <ul>
 <li><a href='/vbic/keywords#consumerpriceindex'>Consumer Price Index</a></li>
-<li><a href='/vbic/keywords#demographicsandstatistics'>Demographics and Statistics</a></li>
+<li><a href='/vbic/keywords#demographics'>Demographics</a></li>
 <li><a href='/vbic/keywords#economicindicators'>Economic Indicators</a></li>
 <li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
 <li><a href='/vbic/keywords#laboreconomics'>Labor Economics</a></li>
