--- a/output/rel-ent.html
+++ b/output/rel-ent.html
@@ -1,8 +1,8 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#businessplans'>Business plans</a></li>
-<li><a href='/vbic/keywords#businessplanning'>Business planning</a></li>
-<li><a href='/vbic/keywords#businessfinancing'>Business financing</a></li>
+<li><a href='/vbic/keywords#businessplans'>Business Plans</a></li>
+<li><a href='/vbic/keywords#businessplanning'>Business Planning</a></li>
+<li><a href='/vbic/keywords#businessfinancing'>Business Financing</a></li>
 <li><a href='/vbic/keywords#franchising'>Franchising</a></li>
-<li><a href='/vbic/keywords#smallbusiness'>Small business</a></li>
+<li><a href='/vbic/keywords#smallbusiness'>Small Business</a></li>
 </ul>
