--- a/output/rel-fin.html
+++ b/output/rel-fin.html
@@ -1,11 +1,10 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#analystinvestmentreports'>Analyst/Investment Reports</a></li>
-<li><a href='/vbic/keywords#annualreports'>Annual reports</a></li>
+<li><a href='/vbic/keywords#analystreports'>Analyst Reports</a></li>
 <li><a href='/vbic/keywords#bonds'>Bonds</a></li>
-<li><a href='/vbic/keywords#industryratios'>Industry ratios</a></li>
-<li><a href='/vbic/keywords#investmentandsecurities'>Investment and securities</a></li>
+<li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/keywords#investments'>Investments</a></li>
 <li><a href='/vbic/keywords#mutualfunds'>Mutual Funds</a></li>
 <li><a href='/vbic/keywords#stocks'>Stocks</a></li>
-<li><a href='/vbic/keywords#stockexchange'>Stock exchange</a></li>
+<li><a href='/vbic/keywords#stockexchange'>Stock Exchange</a></li>
 </ul>
