--- a/output/rel-ind.html
+++ b/output/rel-ind.html
@@ -1,12 +1,12 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#industryclassification'>Industry classification</a></li>
-<li><a href='/vbic/keywords#overviewandtrends'>Overview and trends</a></li>
-<li><a href='/vbic/keywords#swotanalysis'>SWOT analysis</a></li>
-<li><a href='/vbic/keywords#industryratios'>Industry ratios</a></li>
-<li><a href='/vbic/keywords#statistics'>Statistics</a></li>
+<li><a href='/vbic/keywords#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/keywords#swot'>SWOT</a></li>
+<li><a href='/vbic/keywords#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/keywords#statisticsinternational'>Statistics: International</a></li>
+<li><a href='/vbic/keywords#statisticsunitedstates'>Statistics: United States</a></li>
 <li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#marketshare'>Market share</a></li>
+<li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
 <li><a href='/vbic/keywords#industryanalysismodels'>Industry Analysis Models</a></li>
 <li><a href='/vbic/keywords#regulations'>Regulations</a></li>
 </ul>
