--- a/output/rel-log.html
+++ b/output/rel-log.html
@@ -1,5 +1,5 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/keywords#productcodes'>Product codes</a></li>
-<li><a href='/vbic/keywords#transportationmodes'>Transportation modes</a></li>
+<li><a href='/vbic/keywords#productcodes'>Product Codes</a></li>
+<li><a href='/vbic/keywords#transportationmodes'>Transportation Modes</a></li>
 </ul>
