--- a/output/res-by-keyword.html
+++ b/output/res-by-keyword.html
@@ -3,7 +3,7 @@
 <p>Accounting, auditing and tax database that provides access to a variety of tax information, including complete tax law, analysis, journals, news, cases, and rulings. It covers all aspects of tax law. </p>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/us/lnacademic'>LexisNexis Academic</a></p>
 <p>Covers business topics from local, regional and national newspapers, some trade publications, business magazines, SEC filings, some reference sources, key accounting sources, legal information as well as SWOT analysis. To access SWOT information, click on Companies and then Company Profiles. Type name of Company in first box, select "Company name" from drop down box; in second box, type SWOT. To access business news, click on News and then Business.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -37,7 +37,7 @@
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.lexisnexis.com/us/lnacademic'>LexisNexis Academic</a></p>
 <p>Covers business topics from local, regional and national newspapers, some trade publications, business magazines, SEC filings, some reference sources, key accounting sources, legal information as well as SWOT analysis. To access SWOT information, click on Companies and then Company Profiles. Type name of Company in first box, select "Company name" from drop down box; in second box, type SWOT. To access business news, click on News and then Business.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -85,7 +85,7 @@
 <p><a href='http://www.hbs.edu/leadership/database/'>Great American Business Leaders of the Twentieth Century</a></p>
 <p>From the Harvard Business School, this resource is "an effort to identify and chronicle the lives of 20th century men and women whose business leadership shaped the ways that people live, work, and interact". Data is available in Excel format by request.</p>
 <a id='Bonds'><h3>Bonds</h3></a>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -140,7 +140,7 @@
 <p><a href='http://www.census.gov/'>U.S. Census Bureau</a></p>
 <p>Leading source of data about the nation's people and economy. It provides social, demographic, housing and economic statistics mainly for the U.S. Click on headings top of screen to find data sources of interest.</p>
 <a id='Business Plans'><h3>Business Plans</h3></a>
-<p><a href='http://www.bplans.com/'>BPlans.Com</a></p>
+<p><a href='http://www.bplans.com/'>BPlans.com</a></p>
 <p>Free site from Palo Alto Software, Inc. Use this web site to locate sample business plans or Marketing plans for specific business sectors.</p>
 <p><a href='http://www.sba.gov/'>Small Business Administration</a></p>
 <p>Small Business Administration information about how to start, finance, and manage small business</p>
@@ -487,7 +487,7 @@
 <a id='Dow Jones Industrial Average'><h3>Dow Jones Industrial Average</h3></a>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></p>
 <p>From Dow Jones. Provides full text access to over 8,000 business sources including national and international newspapers, magazines, wire services, web sites and Industry (trade) sources. Includes coverage of the Wall Street Journal. NOTE: Licensing restrictions limit use to 12 simlutaneous users. If you are unable to access this database, please try again later.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -533,7 +533,7 @@
 <p>Provides an assessment of the economic performance of each of the 12 regional Federal Reserve districts. The report examines economic activity, specifically employment trends, construction and housing activity, retail sales, consumer confidence, and any other relevant information. Archival data is also available.</p>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></p>
 <p>Provides Industry market research reports on over 700 U.S. industries, as well as economic and demographic reports with focus on the U.S. economy, also available through SmithApps.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -687,7 +687,7 @@
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://refuniv.odyssi.com/cgi-bin/phtml?newsearch.htm'>Reference Universe</a></p>
 <p>Best place to start research for an overview or background information on a topic. Searches more than 43,000 subject encyclopedias and scholarly compendia.</p>
 <a id='Entrepreneurship'><h3>Entrepreneurship</h3></a>
-<p><a href='http://www.bplans.com/'>BPlans.Com</a></p>
+<p><a href='http://www.bplans.com/'>BPlans.com</a></p>
 <p>Free site from Palo Alto Software, Inc. Use this web site to locate sample business plans or Marketing plans for specific business sectors.</p>
 <p><a href='http://smpbff1.dsd.census.gov/TheDataWeb_HotReport/servlet/HotReportEngineServlet?reportid=e8fc5022b3fc243e43d3606f0aee80ae&emailname=bh@boc&filename=ed2_home.hrml'>Community Economic Development HotReport</a></p>
 <p>From the U.S. Census Bureau, provides detailed information for local and regional areas on a wide variety of topics.</p>
@@ -784,7 +784,7 @@
 <p>Offers a wealth of detail Company information, history, property, subsidiaries, officers and directors, long-term debt and capital stock.</p>
 <p><a href='http://wrds.wharton.upenn.edu/'>WRDS (Wharton Research Data Service)</a></p>
 <p>From the University of Pennsylvania, Wharton School of Business this Internet based business data and business intelligence service provides via a single interface, access to data across several disciplines, including Accounting, Banking Economics, Finance, Marketing and Public Policy. Databases include: AuditAnalytics, Bank Regulatory, Blockholders, CBOE Indexes, CISDM Hedge Fund, COMPUSTAT, CRSP, CSMAR, CUSIP, DMEF Academic Data, Dow Jones, Eventus, FDIC, FAMA French &amp; Liquidity Factors, Federal Reserve Bank, IBES, IHS Global Insight, ISSM, KLD, MFLINKS, Markit Trial, Option Metrics, PHLX, Penn World Tables, Risk Metrics, SEC Order Execution, TRACE, Thomson Reuters, WRDS SEC Analytics Suite, Zacks Trial</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>IHS Global Insight DataInsight Web</a></p>
 <p>Economic Forecasts, data and analysis on more than 200 economies and over 170 industries</p>
@@ -1103,7 +1103,7 @@
 <p>"Provides global Company information, credit ratings and research, and market research with tools for risk assessments". Access to both "real-time and historical information on companies, markets, transactions and people worldwide"</p>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.rdsinc.com/texis/rds/sessions?userid=umd&Products=BNI,TBL,BMP'>RDS Business Reference Suite</a></p>
 <p>Provides access to three important database - RDS Business and Industry (covers Industry trade journals, magazines and newspapers); RDS Business and Management Practices (covers journals and magazines dealing with business and management issues) and RDS Tablebase (provides business statistics, i.e., market share, market size, advertising expenditures, etc.).</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://wrds.wharton.upenn.edu/'>WRDS (Wharton Research Data Service)</a></p>
 <p>From the University of Pennsylvania, Wharton School of Business this Internet based business data and business intelligence service provides via a single interface, access to data across several disciplines, including Accounting, Banking Economics, Finance, Marketing and Public Policy. Databases include: AuditAnalytics, Bank Regulatory, Blockholders, CBOE Indexes, CISDM Hedge Fund, COMPUSTAT, CRSP, CSMAR, CUSIP, DMEF Academic Data, Dow Jones, Eventus, FDIC, FAMA French &amp; Liquidity Factors, Federal Reserve Bank, IBES, IHS Global Insight, ISSM, KLD, MFLINKS, Markit Trial, Option Metrics, PHLX, Penn World Tables, Risk Metrics, SEC Order Execution, TRACE, Thomson Reuters, WRDS SEC Analytics Suite, Zacks Trial</p>
@@ -1289,13 +1289,13 @@
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.rdsinc.com/texis/rds/sessions?userid=umd&Products=BNI,TBL,BMP'>RDS Business Reference Suite</a></p>
 <p>Provides access to three important database - RDS Business and Industry (covers Industry trade journals, magazines and newspapers); RDS Business and Management Practices (covers journals and magazines dealing with business and management issues) and RDS Tablebase (provides business statistics, i.e., market share, market size, advertising expenditures, etc.).</p>
 <a id='Marketing Plans'><h3>Marketing Plans</h3></a>
-<p><a href='http://www.bplans.com/'>BPlans.Com</a></p>
+<p><a href='http://www.bplans.com/'>BPlans.com</a></p>
 <p>Free site from Palo Alto Software, Inc. Use this web site to locate sample business plans or Marketing plans for specific business sectors.</p>
 <a id='Master's Theses'><h3>Master's Theses</h3></a>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/pqdtft?accountid=14696'>Dissertations &amp; Theses: Full Text</a></p>
 <p>An authoritative source about doctoral dissertations and master's theses. Full text from 1997 to the present.</p>
 <a id='Mergers and Acquisitions'><h3>Mergers and Acquisitions</h3></a>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></p>
 <p>Comprehensive database of business sources - includes over 3600 peer reviewed journals, trade publications/ magazines, books, case studies, Company profiles, SWOT analysis etc.</p>
@@ -1545,7 +1545,7 @@
 <a id='S&amp;P 500'><h3>S&amp;P 500</h3></a>
 <p><a href='http://proxy-um.researchport.umd.edu/login?url=http://global.factiva.com/en/sess/login.asp?xsid=S003Wvf1WFo5DEs5DEmM9YuNTAvODFyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA'>Factiva</a></p>
 <p>From Dow Jones. Provides full text access to over 8,000 business sources including national and international newspapers, magazines, wire services, web sites and Industry (trade) sources. Includes coverage of the Wall Street Journal. NOTE: Licensing restrictions limit use to 12 simlutaneous users. If you are unable to access this database, please try again later.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
@@ -1711,7 +1711,7 @@
 <p>Official website of the New York stock exchange.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift)</a></p>
 <p>Contains daily and monthly historical stock data on more than 20,000 stocks (inactive and active companies) from the NYSE (from 1926), AMEX (from 1962), and NASDAQ (from 1972) markets. Includes U.S. market indices, treasuries, mutual funds.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/'>Institute for the Study of Security Markets (ISSM)</a></p>
 <p>NYSE/AMEX/NASD Trade and Quote Database covering 1983-1992.</p>
@@ -1730,7 +1730,7 @@
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices (Access via SmithApps - CRSPSift)</a></p>
 <p>Contains daily and monthly historical stock data on more than 20,000 stocks (inactive and active companies) from the NYSE (from 1926), AMEX (from 1962), and NASDAQ (from 1972) markets. Includes U.S. market indices, treasuries, mutual funds.</p>
-<p><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></p>
+<p><a href=''>Bloomberg</a></p>
 <p>Contains current and historical financial data on individual companies, stock market indices, fixed-income securities, currencies, commodities, and futures for both international and domestic markets.</p>
 <p><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance - Access via SmithApps</a></p>
 <p>Provides index related financial data across global markets.</p>
