--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -43,8 +43,8 @@
 <li><a href='http://baselinescenario.com/'>Baseline Scenario.com</a></li>
 <li><a href='http://bigcharts.marketwatch.com/'>Big Charts</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://galenet.galegroup.com/servlet/BGMI/form?l=1&u=BGMI&s=1&locID=umd_um&o=DocTitle'>Biography and Genealogy Master Index</a></li>
-<li><a href=''>Bloomberg (via the Bloomberg terminals in 1318 Van Munching Hall)</a></li>
-<li><a href='http://www.bplans.com/'>BPlans.Com</a></li>
+<li><a href=''>Bloomberg</a></li>
+<li><a href='http://www.bplans.com/'>BPlans.com</a></li>
 <li><a href='http://www.brookings.edu/topics/globalization.aspx'>Brookings Institution &mdash; Globalization Page</a></li>
 <li><a href='http://www.bls.gov/'>Bureau of Labor Statistics</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip&group=main&profile=ehost&defaultdb=bth'>Business Source Complete</a></li>
