--- a/output/rel-car.html
+++ b/output/rel-car.html
@@ -1,12 +1,6 @@
 <h3>Related Topics</h3>
 <ul>
 <li><a href='/vbic/keywords#companyresearch'>Company Research</a></li>
-<li><a href='/vbic/keywords#industryresearch'>Industry Research</a></li>
-<li><a href='/vbic/keywords#jobsearchengines'>Job Search Engines</a></li>
-<li><a href='/vbic/keywords#jobsourcesus'>Job Sources (US)</a></li>
-<li><a href='/vbic/keywords#jobsourcesinternational'>Job Sources (International)</a></li>
-<li><a href='/vbic/keywords#resume'>Resume</a></li>
-<li><a href='/vbic/keywords#interview'>Interview</a></li>
-<li><a href='/vbic/keywords#salary'>Salary</a></li>
-<li><a href='/vbic/keywords#campusresources'>Campus Resources</a></li>
+<li><a href='/vbic/keywords#industry'>Industry</a></li>
+<li><a href='/vbic/keywords#jobs'>Jobs</a></li>
 </ul>
