--- a/output/rel-com.html
+++ b/output/rel-com.html
@@ -5,13 +5,12 @@
 <li><a href='/vbic/keywords#competitors'>Competitors</a></li>
 <li><a href='/vbic/keywords#financialinformation'>Financial information</a></li>
 <li><a href='/vbic/keywords#internationalbusiness'>International Business</a></li>
-<li><a href='/vbic/keywords#investmentandsecurities'>Investment and securities</a></li>
-<li><a href='/vbic/keywords#manufacturers'>Manufacturers</a></li>
-<li><a href='/vbic/keywords#marketshare'>Market share</a></li>
-<li><a href='/vbic/keywords#mergersandacquisitions'>Mergers and acquisitions</a></li>
-<li><a href='/vbic/keywords#ownershipstatus'>Ownership status</a></li>
-<li><a href='/vbic/keywords#biographicalinformation'>Biographical Information</a></li>
+<li><a href='/vbic/keywords#investments'>Investments</a></li>
+<li><a href='/vbic/keywords#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/keywords#marketshare'>Market Share</a></li>
+<li><a href='/vbic/keywords#mergersandacquisitions'>Mergers and Acquisitions</a></li>
+<li><a href='/vbic/keywords#biography'>Biography</a></li>
 <li><a href='/vbic/keywords#rankings'>Rankings</a></li>
-<li><a href='/vbic/keywords#regulationsunitedstates'>Regulations: United States</a></li>
-<li><a href='/vbic/keywords#swotanalysis'>SWOT analysis</a></li>
+<li><a href='/vbic/keywords#regulations'>Regulations</a></li>
+<li><a href='/vbic/keywords#swot'>SWOT</a></li>
 </ul>
