--- a/output/rel-mar.html
+++ b/output/rel-mar.html
@@ -2,7 +2,7 @@
 <ul>
 <li><a href='/vbic/keywords#advertising'>Advertising</a></li>
 <li><a href='/vbic/keywords#competitors'>Competitors</a></li>
-<li><a href='/vbic/keywords#consumeranalysis'>Consumer analysis</a></li>
-<li><a href='/vbic/keywords#productdevelopment'>Product development</a></li>
+<li><a href='/vbic/keywords#consumeranalysis'>Consumer Analysis</a></li>
+<li><a href='/vbic/keywords#productdevelopment'>Product Development</a></li>
 <li><a href='/vbic/keywords#promotion'>Promotion</a></li>
 </ul>
